# yaks

./: .envrc  .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  install.sh  prompt.md
.claude/: CLAUDE.md
.githooks/: verify-checks
.github/workflows/: lint.yml  release.yml  test.yml
completions/: yx.bash  yx.zsh
docs/plans/: 2026-01-30-argc-migration.md
lib/: yaks.sh
prototypes/rust/: Cargo.toml  README.md
prototypes/rust/src/: app.rs  lib.rs  main.rs
some other one/Oh, here's another/And one more/: context.md
spec/: add.sh  done.sh  fuzzy_match.sh  list.sh  log_command.sh  move.sh  prune.sh  rm.sh  spec_helper.sh  sync.sh  sync_gitkeep.sh  sync_no_pollution.sh  sync_unit.sh  yk.sh
spec/features/: README.md  add.md  add.sh  completions.md  context.md  done.md  done.sh  git_availability_check.sh  install.sh  list.md  list.sh  move.md  prune.md  prune.sh  rm.md  sync.md  sync.sh  sync_push.sh  sync_worktrees.sh
spec/unit/: README.md  log_command.sh  sync_unit.sh
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/cli/: mod.rs
src/adapters/log/: git_log.rs  mod.rs
src/adapters/storage/: directory.rs  mod.rs
src/application/: add_yak.rs  done_yak.rs  edit_context.rs  list_yaks.rs  mod.rs  move_yak.rs  prune_yaks.rs  remove_yak.rs  show_context.rs  sync_yaks.rs
src/domain/: mod.rs  yak.rs
src/ports/: log.rs  mod.rs  output.rs  storage.rs  sync.rs
tests/: integration_test.rs
web/: .eslintrc.cjs  README.md  index.html  package.json  tsconfig.json  vite.config.ts
web/public/: 404.html
web/src/: App.tsx  index.css
(+35 files in other folders)
